// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collapses possibly unused with cautious wording and explains rows on expansion 1`] = `
"uptide list

12 outdated   12 major   0 minor   0 groups   11 tooling

TOOLING  11 packages, used by scripts and config · --all

POSSIBLY UNUSED  1 package, no usage found by Uptide's scan; verify before removing · --all

Usage is a syntax scan, no type analysis.
Generic analysis is the default; verified means a migration pack is available.
Next  uptide check babel-plugin-example
"
`;

exports[`retains unknown counts and collapses repeated network failures (TTY=false) 1`] = `
"uptide list

0 outdated   6 not checked (timed out)   0 major   0 minor   0 groups   0 tooling

? 6 packages on registry.npmjs.org: timed out, skipped
Usage is a syntax scan, no type analysis.
Generic analysis is the default; verified means a migration pack is available.
"
`;

exports[`retains unknown counts and collapses repeated network failures (TTY=true) 1`] = `
"[1muptide list[22m

[1m0[22m outdated   [1m6[22m not checked (timed out)   [1m0[22m major   [1m0[22m minor   [1m0[22m groups   [1m0[22m tooling

? 6 packages on registry.npmjs.org: timed out, skipped
[2mUsage is a syntax scan, no type analysis.[22m
[2mGeneric analysis is the default; verified means a migration pack is available.[22m
"
`;
